@@ -1,3 +1,7 @@
+18 May 2018: Wouter
+	- More review fixes, store.c, error log and fixup of getline return,
+	  and not variable use before declaration.
+
 14 May 2018: Wouter
 	- Patch set from Martin Sehnoutka,
 	  It migrates the functionality currently provided by the script
